# kazi-dev-blog

./: .flake8  .gitignore  README.md  jest.config.ts  next.config.js  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json
.github/workflows/: on-pr-linter.yaml  on-pr-run-linter.yaml  on-pr-run-unit-tests.yaml  on-pr-static-build.yaml
components/NotFound/: index.tsx
components/blogs/: index.tsx
components/layouts/: index.tsx
components/search/: index.tsx
content/about/: software-engineer-siemens.md
content/blogs/: cypress-rest-api-testing.md  dotenv.md  fastapi-background-tasks.md  git-log.md  hamas-is-isis.md  hosted-machines-monitoring.md  iperf-test.md  js-api-validation-ajv.md  js-rewire.md  makefiles-in-sw-dev.md  map-js.md  markdown-full-example.md  markdown-linters.md  middleware-fastapi.md  minimal-cli-appeal.md  mocking-node-using-sinon.md  my-100daysofcode-journey.md  my-qa-manifest.md  mypy-integration.md  newrelic-fastapi.md  niceness-linux.md  pre-commit.md  pytest-caplog.md  pytest-custom-markers.md  pytest-parametrize.md  python-custom-exceptions.md  python-json-methods.md  python-poetry.md  python-schedule.md  python-type-checking.md  tests-workflow-matrix.md  y2kbug.md  (+4 more)
interfaces/: Blog.ts  Markdown.ts
lib/: blogs.ts  md.ts
pages/: 404.tsx  index.tsx
public/: aboutme.md
styles/: globals.css
tests/functional/: conftest.py  pyproject.toml  pytest.ini  test_blogs_categories.py  test_footer.py  test_home.py  test_navbar.py
tests/functional/pages/: base.py  blogs_categories.py  elements.py  footer.py  home_page.py  navbar.py
(+24 files in other folders)
